errors solved