@@ -57,11 +57,20 @@
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.22.1</version>
+          <executions>
+            <execution>
+              <id>default-test</id>
+              <phase>test</phase>
+              <goals>
+                <goal>test</goal>
+              </goals>
+              <configuration>
+                <argLine>${surefireArgLine}</argLine>
+              </configuration>
+            </execution>
+          </executions>
           <configuration>
-            <argLine>${surefireArgLine}</argLine>
-            <excludes>
-              <exclude>**/IT*.java</exclude>
-            </excludes>
+            <argLine>-XX:MaxPermSize=512m</argLine>
           </configuration>
         </plugin>
         <plugin>
@@ -72,7 +81,7 @@
               <manifest>
                 <addClasspath>true</addClasspath>
                 <mainClass>com.landaluce.holamundo.App</mainClass>
-                <classpathPrefix>dependency/</classpathPrefix>
+                <classpathPrefix>dependency</classpathPrefix>
               </manifest>
             </archive>
           </configuration>
@@ -89,6 +98,9 @@
         <plugin>
           <artifactId>maven-site-plugin</artifactId>
           <version>3.7.1</version>
+          <configuration>
+            <skip>false</skip>
+          </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-project-info-reports-plugin</artifactId>
@@ -97,72 +109,34 @@
         <plugin>
           <groupId>org.jacoco</groupId>
           <artifactId>jacoco-maven-plugin</artifactId>
-          <version>0.8.10-SNAPSHOT</version>
+          <version>0.8.10</version>
           <executions>
+            <!-- pre-unit-test execution helps setting up some maven property,
+              which will be used later by JaCoCo -->
             <execution>
-              <id>jacoco-initialize</id>
+              <id>pre-unit-test</id>
               <goals>
                 <goal>prepare-agent</goal>
               </goals>
               <configuration>
                 <destFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</destFile>
+                <!-- passing property which will contains settings for JaCoCo agent.
+                  If not specified, then "argLine" would be used for "jar" packaging -->
                 <propertyName>surefireArgLine</propertyName>
               </configuration>
             </execution>
+            <!-- report phase setup -->
             <execution>
-              <id>jacoco-site</id>
-              <phase>verify</phase>
+              <id>post-unit-test</id>
+              <phase>test</phase>
               <goals>
                 <goal>report</goal>
               </goals>
               <configuration>
+                <!-- output file with report data. -->
                 <dataFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</dataFile>
+                <!-- output directory for the reports. -->
                 <outputDirectory>${project.reporting.outputDirectory}/jacoco-ut</outputDirectory>
-              </configuration>
-            </execution>
-          </executions>
-        </plugin>
-        <plugin>
-          <artifactId>maven-failsafe-plugin</artifactId>
-          <version>2.18.1</version>
-          <executions>
-            <execution>
-              <id>integration-tests</id>
-              <goals>
-                <goal>integration-test</goal>
-                <goal>verify</goal>
-              </goals>
-              <configuration>
-                <argLine>${failsafeArgLine}</argLine>
-                <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
-                <includes>
-                  <include>**/*IT.java</include>
-                </includes>
-              </configuration>
-            </execution>
-          </executions>
-        </plugin>
-        <plugin>
-          <groupId>org.codehaus.mojo</groupId>
-          <artifactId>build-helper-maven-plugin</artifactId>
-          <version>1.9.1</version>
-          <executions>
-            <execution>
-              <id>add-integration-test-sources</id>
-              <phase>generate-test-sources</phase>
-              <goals>
-                <goal>add-test-source</goal>
-                <goal>add-test-resource</goal>
-              </goals>
-              <configuration>
-                <sources>
-                  <source>src/itest/java</source>
-                </sources>
-                <resources>
-                  <resource>
-                    <directory>src/itest/resources</directory>
-                  </resource>
-                </resources>
               </configuration>
             </execution>
           </executions>
@@ -170,4 +144,20 @@
       </plugins>
     </pluginManagement>
   </build>
+  <reporting>
+    <plugins>
+      <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <reportSets>
+          <reportSet>
+            <reports>
+              <!-- select non-aggregate reports -->
+              <report>report</report>
+            </reports>
+          </reportSet>
+        </reportSets>
+      </plugin>
+    </plugins>
+  </reporting>
 </project>
